<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_interface_header">
        <ListPreference
            android:defaultValue="default"
            android:dialogTitle="@string/settings_theme_dialog_title"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/settings_theme"
            android:icon="@drawable/ic_brightness_medium"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_how_to_use_app_button"
            android:title="@string/settings_show_button_how_to_use_app"
            android:summary="@string/settings_show_button_how_to_use_app_description"
            android:icon="@drawable/ic_book" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_patching_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="ignore_checksum"
            android:title="@string/settings_ignore_checksum"
            android:summary="@string/settings_ignore_checksum_description"
            android:icon="@drawable/ic_fingerprint"/>
    </PreferenceCategory>
</PreferenceScreen>