<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_action"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apply_patch"
            android:icon="@drawable/healing"
            android:title="@string/nav_apply_patch"/>
        <item
            android:id="@+id/nav_create_patch"
            android:icon="@drawable/plus_box"
            android:title="@string/nav_create_patch"/>
        <item
            android:id="@+id/nav_smd_fix_checksum"
            android:icon="@drawable/fingerprint"
            android:title="@string/nav_smd_fix_checksum"/>
        <item
            android:id="@+id/nav_snes_add_del_smc_header"
            android:icon="@drawable/content_cut"
            android:title="@string/nav_snes_add_del_smc_header"/>
    </group>

    <group
        android:id="@+id/grp_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/thumb_up"
            android:title="@string/nav_rate"/>
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/gift"
            android:title="@string/nav_donate"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_variant"
            android:title="@string/nav_share"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_circle"
            android:title="@string/nav_help"/>
    </group>

</menu>
