<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AboutFragment">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="64dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:layout_height="64dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/appNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/versionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_activity_about_tab_version"/>

                <TextView
                    android:text="@string/help_activity_about_tab_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" />

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_activity_about_tab_copyright"/>

            </LinearLayout>
        </LinearLayout>

        <org.sufficientlysecure.htmltextview.HtmlTextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@android:style/TextAppearance.Small" />

    </LinearLayout>
</ScrollView>
