<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true">

    <LinearLayout
        style="@style/CardsHolder">

        <androidx.cardview.widget.CardView
            android:id="@+id/romCardView"
            style="@style/Card.Clickable">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:id="@+id/romLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/main_activity_rom_file"
                    android:textColor="@color/colorCardHeaderText"
                    android:fontFamily="sans-serif-light"
                    android:textSize="24sp"/>

                <View
                    android:id="@+id/romLine"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_line_height"
                    android:layout_marginBottom="@dimen/card_line_margin"
                    android:layout_marginTop="@dimen/card_line_margin"
                    android:background="@color/colorCardLine"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:tint="@color/colorIcon"
                        app:srcCompat="@drawable/folder"/>

                    <TextView
                        android:id="@+id/romNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/main_activity_tap_to_select"
                        android:fontFamily="sans-serif-light"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/helpCardView"
            style="@style/Card">

            <TextView
                android:id="@+id/fixChecksumInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/smd_fix_checksum_help"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
